--- a/Portfolio Website/about us.html
+++ b/Portfolio Website/about us.html
@@ -97,7 +97,6 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo" style="font-family: cursive;">Chikamso</a>
       <ul class="right">
         <li><a href="index.html">Home</a></li>
         <li><a href="about us.html">About Me</a></li>
@@ -149,7 +148,7 @@
   <!-- Footer -->
   <footer>
     <div>
-      <h5>Chikamso .P. Chijioke</h5>
+      <h5>Chikamso Praise Chijioke</h5>
       <p>Front-End Developer | Creating clean & modern websites</p>
     </div>
     <div style="margin: 15px 0;">
