--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -154,16 +154,22 @@
       document.body.classList.add('loaded');
     });
   </script>
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    M.Sidenav.init(elems);
+  });
+</script>
+
 
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo" style="font-family: cursive;">Chikamso</a>
       <ul class="right">
         <li><a href="index.html">Home</a></li>
         <li><a href="about us.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" >Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -181,8 +187,8 @@
     <div id="project-carousel" class="splide" aria-label="My Projects">
       <div class="splide__track">
         <ul class="splide__list">
-          <li class="splide__slide"><img src="img/Screenshot 2025-09-02 214546.jpg" alt="Project 1" style="width:100%;"></li>
-          <li class="splide__slide"><img src="img/job 3.jpg" alt="Project 2" style="width:100%;"></li>
+          <li class="splide__slide"><img src="img/Screenshot 2025-09-02 214546.jpg" alt="Project 1" style="width:100%;"></li> <br>
+          <li class="splide__slide"><img src="img/job 3.jpg" alt="Project 2" style="width:100%;"></li> <br>
           <li class="splide__slide"><img src="img/job 2.jpg" alt="Project 3" style="width:100%;"></li>
         </ul>
       </div>
@@ -218,7 +224,7 @@
   <!-- Footer -->
   <footer>
     <div>
-      <h5>Chikamso .P. Chijioke</h5>
+      <h5>Chikamso Praise Chijioke</h5>
       <p>Front-End Developer | Building clean & modern websites</p>
     </div>
     <div style="margin: 15px 0;">
@@ -226,7 +232,7 @@
       <a href="https://github.com/" target="_blank">GitHub</a>
       <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
     </div>
-    <p style="margin-top: 10px; font-size: 14px;">&copy; 2025 Kimmaxwebsite.com | All Rights Reserved</p>
+    <p style="margin-top: 10px; font-size: 14px;">&copy; 2025 My portfolio website.com | All Rights Reserved</p>
   </footer>
 
 </body>
