--- a/Portfolio Website/projects.html
+++ b/Portfolio Website/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Myportfolio.com</title>
+  <title>Projects  Myportfolio.com</title>
   <link rel="stylesheet" href="materialize/css/materialize.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
@@ -110,7 +110,6 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo" style="font-family: cursive;">Chikamso</a>
       <ul class="right">
         <li><a href="index.html">Home</a></li>
         <li><a href="about us.html">About Me</a></li>
@@ -162,7 +161,7 @@
   <!-- Footer -->
   <footer>
     <div>
-      <h5>Chikamso .P. Chijioke</h5>
+      <h5>Chikamso Praise Chijioke</h5>
       <p>Front-End Developer | Building clean & modern websites</p>
     </div>
     <div style="margin: 15px 0;">
