--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,6 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo" style="font-family: cursive;">Chikamso</a>
       <ul class="right">
         <li><a href="index.html">Home</a></li>
         <li><a href="about us.html">About Me</a></li>
@@ -170,7 +169,7 @@
       <a href="https://github.com/" target="_blank">GitHub</a>
       <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
     </div>
-    <p style="margin-top: 10px; font-size: 14px;">&copy; 2025 Kimmaxwebsite.com | All Rights Reserved</p>
+    <p style="margin-top: 10px; font-size: 14px;">&copy; 2025 Myportfoliowebsite.com | All Rights Reserved</p>
   </footer>
 
 </body>
